# wikibase-bulk-kit

./: README.md  pyproject.toml
RaiseWikibase/: __init__.py  datamodel.py  dbconnection.py  docker.py  raiser.py  utils.py
configs/: datasets.yml  project.yml  schema.yml  schema_es.yml  setup.yml  setup_es.yml
configs/datosabiertos.mineduc.cl/directorio_ee/: mapping.yml  schema.yml
data/: directorio_2024_border.csv  directorio_2024_lite.csv  resumen_matricula_ee_2024_lite.csv
wbk/: cli.py  main.py
wbk/backend/: __init__.py  api.py  interface.py  raisewikibase.py
wbk/config/: __init__.py  manager.py  models.py  settings.py
wbk/mapping/: __init__.py  models.py  processor.py  utils.py
wbk/mapping/pipeline/: __init__.py  claim_builder.py  context.py  update_strategies.py  value_resolution.py
wbk/processor/: bulk_item_search.py
wbk/schema/: __init__.py  models.py  sync.py
