[tool.poetry]
name = "wikibase-bulk-kit"
version = "0.1.0"
description = ""
authors = ["Roberto Alvarado <ralvarado@sawa.cl>"]
readme = "README.md"
packages = [{include = "wbk"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.2.1"
rich = "^14.1.0"
wikibaseintegrator = "^0.12.0"
pyyaml = "^6.0"
requests = "^2.32.0"
pydantic = "^2.0.0"

[tool.poetry.scripts]
wbk = "wbk.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
